--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>React App</title>
   </head>
   <body>
-    <h1> Toy ToDo App</h1>
+    <h1> My Garden App </h1>
     <div class="todoapp" id="root">
     </div>
     <script src="/static/bundle.js"></script>
